<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="random_button_text">Random</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello World</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="toast_button_text">Toast</string>
    <string name="count_button_text">Count</string>
    <string name="Full_name_textview">Slack fullmame: Akpobome, oke Kelvin</string>
    <string name="slack_username_textview">slack username: Kelvinakpobome</string>
    <string name="start_email_textview">slack email: Kelvinakpobome@gmail.com</string>
    <string name="track_textview">Tracks: Backend, frontend, mobile and design</string>
    <string name="number_textview">0</string>
</resources>
